feat: restore uuid function modules
