# openapi/openapi.yaml
@@ -87,6 +87,19 @@ paths:
           $ref: '#/components/responses/NotFound'
         '401':
           $ref: '#/components/responses/AuthenticationRequired'
+  /api/fn/{functionId}.js:
+    get:
+      operationId: getFunctionModule
+      summary: Get an ES module that calls a function UUID
+      parameters:
+        - $ref: '#/components/parameters/FunctionId'
+      responses:
+        '200':
+          description: JavaScript ES module
+          content:
+            text/javascript:
+              schema:
+                type: string
     put:
       operationId: createFunctionVersion
       summary: Create the next function version
